--- a/perler_bead_designer/macos/Runner/Release.entitlements
+++ b/perler_bead_designer/macos/Runner/Release.entitlements
@@ -4,5 +4,9 @@
 <dict>
 	<key>com.apple.security.app-sandbox</key>
 	<true/>
+	<key>com.apple.security.device.gpu</key>
+	<true/>
+	<key>com.apple.security.device.metal</key>
+	<true/>
 </dict>
 </plist>
