--- a/perler_bead_designer/pubspec.yaml
+++ b/perler_bead_designer/pubspec.yaml
@@ -2,7 +2,7 @@ name: bunnycc_perler
 description: "兔可可的拼豆世界 - BunnyCC Perler Bead Designer"
 publish_to: 'none'
 
-version: 1.1.0+3
+version: 1.1.2+4
 
 environment:
   sdk: ^3.10.7
@@ -19,6 +19,7 @@ dependencies:
   provider: ^6.1.0
   path_provider: ^2.1.0
   csv: ^5.1.0
+  excel: ^4.0.6
 
 dev_dependencies:
   flutter_test:
