--- a/perler_bead_designer/pubspec.yaml
+++ b/perler_bead_designer/pubspec.yaml
@@ -2,7 +2,7 @@ name: bunnycc_perler
 description: "兔可可的拼豆世界 - BunnyCC Perler Bead Designer"
 publish_to: 'none'
 
-version: 1.1.5+5
+version: 2.0.0+6
 
 environment:
   sdk: ^3.10.7
@@ -33,3 +33,4 @@ flutter:
 
   assets:
     - assets/changelog.json
+    - assets/images/
