--- a/perler_bead_designer/pubspec.yaml
+++ b/perler_bead_designer/pubspec.yaml
@@ -2,7 +2,7 @@ name: bunnycc_perler
 description: "兔可可的拼豆世界 - BunnyCC Perler Bead Designer"
 publish_to: 'none'
 
-version: 2.0.5+7
+version: 2.1.2+9
 
 environment:
   sdk: ^3.10.7
@@ -20,6 +20,8 @@ dependencies:
   path_provider: ^2.1.0
   csv: ^5.1.0
   excel: ^4.0.6
+  window_manager: ^0.4.3
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
